// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hoists function call 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"cdu2tfg\\"
  }
};

const _foo = foo();

_foo ? \\"cdu2tfg \\" : \\"\\";"
`;

exports[`mixed 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"cdu2tfg\\",
    opacity: \\"c1w3b0fg\\"
  },
  red: {
    color: \\"cs58kxv\\"
  }
};
\\"cs58kxv \\" + (foo ? \\"c1w3b0fg \\" : \\"\\");"
`;

exports[`moves test 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"cdu2tfg\\"
  }
};

const _foo = foo();

_foo ? \\"cdu2tfg \\" : \\"\\";"
`;

exports[`object 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"cdu2tfg\\",
    opacity: \\"c1w3b0fg\\"
  },
  red: {
    color: \\"cs58kxv\\"
  }
};
(bar ? \\"cs58kxv \\" : foo ? \\"cdu2tfg \\" : \\"\\") + (foo ? \\"c1w3b0fg \\" : \\"\\");"
`;

exports[`property access 1`] = `
"import style9 from 'style9';
const styles1 = {
  default: {
    color: \\"cdu2tfg\\"
  }
};
const styles2 = {
  red: {
    color: \\"cs58kxv\\"
  }
};
style9(styles1.default, styles2.red);"
`;

exports[`string literals 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"cdu2tfg\\",
    opacity: \\"c1w3b0fg\\"
  },
  red: {
    color: \\"cs58kxv\\"
  }
};
\\"cs58kxv \\" + \\"c1w3b0fg \\";"
`;

exports[`supports destructuring assignment 1`] = `
"import style9 from 'style9';
const {
  blue
} = {
  blue: {
    color: \\"cdu2tfg\\"
  }
};
console.log(blue);"
`;

exports[`supports member expression access 1`] = `
"import style9 from 'style9';
const blue = {
  blue: {
    color: \\"cdu2tfg\\"
  }
}.blue;
console.log(blue);"
`;

exports[`ternary 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    color: \\"cdu2tfg\\",
    opacity: \\"c1w3b0fg\\"
  },
  red: {
    color: \\"cs58kxv\\"
  }
};
(foo ? \\"cdu2tfg \\" : \\"cs58kxv \\") + (foo ? \\"c1w3b0fg \\" : \\"\\");"
`;
